--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "expo": "^20.0.0",
     "react": "16.0.0-alpha.12",
     "react-native": "https://github.com/expo/react-native/archive/sdk-20.0.0.tar.gz",
+    "react-native-autocomplete-input": "^3.3.1",
+    "react-native-elements": "^0.17.0",
     "react-navigation": "^1.0.0-beta.12"
   },
   "devDependencies": {
