--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@expo/samples": "^2.0.2",
     "@expo/vector-icons": "^5.2.0",
     "expo": "^20.0.0",
+    "native-base": "^2.3.2",
     "react": "16.0.0-alpha.12",
     "react-native": "https://github.com/expo/react-native/archive/sdk-20.0.0.tar.gz",
     "react-native-autocomplete-input": "^3.3.1",
